@@ -1,3 +1,9 @@
+2001-05-09  Arturo Espinosa Aldama  <arturo@ximian.com>
+
+	* debug.pl.in (xst_debug_open_output_file): set up a hash here so we
+	cache the opened files. 
+	(xst_debug_print_string_to_file): Not closing this files any more.
+
 2001-05-08  Hans Petter Jansson  <hpj@ximian.com>
 
 	* shares-conf.in (set_immediate): Fix up the path before creating share
